  ausgecheckte ist oben.
- Diverse Typos, Wording
- Sub-Navigation: Ermöglicht, dass es mehrere Subnavigations mit dem selben
  Namen gibt.
- Bilder/Links sind im WYSIWYG-Editor jetzt interne CMS-Links, damit z.B.
  Bilder inline sofort angezeigt werden können (bug #4163).
- WYSIWYG-Editor: Bild im Absatz einfügen löscht nicht mehr den Rest des
  Textes.


0.9.13 (2008-05-13)
-------------------

- Properties mit dem Namespace "DAV:" werden jetzt nicht mehr in XML-Dokumente
  kopiert (bug #4126).
- Filter in Dateiliste reagiert jetzt auf Dateinamen (bug #4132).
- Videos können jetzt im WYSIWYG-Editor bearbeitet und eingefügt werden (bug
  #4149).
- Neuer Contenttype: Portraitboxen (bug #3852).
- Portraitbox in Artikel verlinken (bug #4051).
- Behandlung von Clipboard-Einträgen auf gelöschte Objekte verbessert.
- Sortierung nach Änderungsdatum ging nicht immer (bug #4150).
- Wenn ein Verzeichnis XML-Resourcen enthält, die kein valides XML enthalten
  werden sie jetzt als unbekannte Resource interpretiert (bug #4151).  


0.9.12 (2008-04-30)
-------------------

- "Erstes Related als Box" (bug #4053).
- status=OK bei veröffentlichten Dokumenten (bug #4125).
- Sortierung der Suche (Jahr/Ausgabe) korrigiert (bug #4113).
- ehannels mit body/container liefert kein Forbidden mehr.

0.9.11 (2008-04-28)
-------------------

- Selten gebrauchte Aktionen in ein DropDown verschoben (derzeit umbenennen und
  löschen).
- Einige Menu-Titel wurden nicht übersetzt (bug #4115)
- Unterstützung für alte Channels mit body/container (bug #4109).
- Favicon im CMS jetzt mit rosa Hintergrund zur besseren Unterscheidung (bug
  #4127).
- Objekte können jetzt kopiert werden: Aktion auf Ordnern bei der man das zu
  kopierende Objekt aus dem Clipboard wählt (bug #4130).
- Breadcrumbs sind wieder draggable.
- Keine freie Eingabe von Keywords mehr (bug #4120).
- Doppelte Eingabe von Keywords nicht mehr möglich (bug #4119).
- Liste der Keywords bei Typeahead ist jetzt sortiert.
