@@ -14,6 +14,7 @@ zeit.cms changes
   Bilder inline sofort angezeigt werden können (bug #4163).
 - WYSIWYG-Editor: Bild im Absatz einfügen löscht nicht mehr den Rest des
   Textes.
+- WYSIWYG-Editor: Paste from Word erzeugt zuverlässiger Absätze
 
 
 0.9.13 (2008-05-13)
